# A-share-trading

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  run_backtest.py  run_champion_challenger.py  run_fetch_data.py  run_predict.py  run_train.py
trading_system/: __init__.py  champion_challenger.py  check_env.py  config.py  feature_cache.py  invariants.py  predict.py
trading_system/audit/: __init__.py  experiment_registry.py
trading_system/backtest/: __init__.py  baselines.py  costs.py  discipline.py  engine.py  metrics.py  runner.py  stress.py
trading_system/config/: costs.yaml  data.yaml  exit.yaml  regime.yaml  risk.yaml  train.yaml  triggers.yaml
trading_system/data/: __init__.py  calendar.py  fetch_training_data.py  financial_store.py  financials.py  industry_store.py  price_layers.py  quality.py  schema.py  store.py  universe.py
trading_system/features/: __init__.py  registry.py
trading_system/labels/: __init__.py
trading_system/model/: __init__.py  approval.py  cpcv.py  cv.py  model_io.py  train.py  tune.py
trading_system/overlays/: __init__.py
trading_system/playbook/: __init__.py
trading_system/portfolio/: __init__.py
trading_system/regime/: __init__.py  hmm.py
trading_system/reports/: __init__.py  monitor.py
trading_system/run/: __init__.py  diagnose_data_quality.py  phase0_acceptance.py  phase1_factor_report.py  phase2_acceptance.py  phase3_acceptance.py
trading_system/tests/: __init__.py  test_baostock_quota.py  test_fetch_training_data.py  test_financial_filter.py  test_financials.py  test_full_features.py  (+15 more)
(+13 files in other folders)
